<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/addressLayout"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="100dp"
            android:minWidth="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo_mydukan" />

        <TextView
            android:id="@+id/helpInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/listrow_topmargin"
            android:maxLines="30"
            android:minLines="16"
            android:scrollbars="vertical"
            android:text="@string/help_info"
            android:textColor="@color/text_color"
            android:textSize="@dimen/mediumtextSize" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="YouTube Videos"/>
        </LinearLayout>
        <TextView
            android:id="@+id/helpno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/smalltextSize" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/help_emailid"
            android:textColor="@color/text_color"
            android:textSize="@dimen/smalltextSize" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_version"
            android:textColor="@color/text_muted_color"
            android:textSize="@dimen/smalltextSize" />

        <Button
            android:id="@+id/btn_PrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="Privacy Policy"
            android:background="@color/tw__transparent"
            android:textColor="@color/green_500"
            android:textSize="12sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>