<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/supplierlayoutId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#efefef"
    android:baselineAligned="false"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:elevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="5dp"
        android:baselineAligned="false"
        android:layout_margin="2dp"
        android:weightSum="10">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/supplierImage"
            android:layout_width="@dimen/listrow_imagewidth"
            android:layout_height="@dimen/listrow_imageheight"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_camera" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/supplierdDetails"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/supplierFullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Supplier Name"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/supplierAddressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/supplierFullName"
            android:text="@string/Click_to_view_the_product"
            android:textColor="@color/text_muted_color"
            android:textSize="@dimen/smalltextSize" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mybuttonlayout"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/addorsubscribebtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/buttontext"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/openbtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:background="@color/green_500"
            android:text="@string/open"
            android:textAllCaps="false"
            android:textColor="@color/buttontext"
            android:textSize="10sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

    </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
